[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/title.gd" type="Script" id=1]
[ext_resource path="res://images/Simpsons_clouds.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/font01-100.fnt" type="BitmapFont" id=3]
[ext_resource path="res://sounds/title.wav" type="Sample" id=4]

[sub_resource type="SampleLibrary" id=1]

samples/title0 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="title" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 4.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -10.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="game_name" type="Label" parent="."]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 910.0
margin/top = 190.0
margin/right = 525.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "โครงการพี่สอนน้อง"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Start" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 920.0
margin/top = 290.0
margin/right = 670.0
margin/bottom = 210.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="Exit" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 920.0
margin/top = 140.0
margin/right = 670.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="title_sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


